--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game with Maze and Ghosts</title>
+    <title>Snake Game with Moving Obstacles</title>
     <style>
         body {
             margin: 0;
@@ -12,27 +12,60 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #282c34;
+            background: linear-gradient(135deg, #7b3d2d, #ff6f61);
+            font-family: 'Arial', sans-serif;
         }
+
         canvas {
-            border: 1px solid #000;
+            border: 2px solid #333;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
         }
+
         #try-again {
             position: absolute;
             top: 60%;
             left: 50%;
             transform: translate(-50%, -50%);
-            padding: 10px 20px;
-            font-size: 20px;
-            background-color: #007bff;
+            padding: 12px 25px;
+            font-size: 22px;
+            background-color: #F9A8D4; /* Peach shade */
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             display: none;
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.6);
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         #try-again:hover {
-            background-color: #0056b3;
+            background-color: #F472B6; /* Lighter peach */
+            transform: scale(1.05);
+        }
+
+        #try-again:active {
+            background-color: #EC4899; /* Darker peach */
+            transform: scale(1);
+        }
+
+        #try-again:focus {
+            outline: none;
+        }
+
+        h1 {
+            color: white;
+            text-align: center;
+            font-size: 3rem;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+        }
+
+        .scoreboard {
+            color: white;
+            font-size: 24px;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+            position: absolute;
+            top: 20px;
+            left: 20px;
         }
     </style>
 </head>
@@ -58,22 +91,15 @@ const WALL_COLOR = 'rgb(50, 50, 50)';  // Dark Gray for walls
 
 let score = 0;
 let running = true;
-let snakeSpeed = 2;  // Slow starting snake speed
+let snakeSpeed = 1;  // Slower starting snake speed
+let level = 1;
 let direction = "RIGHT";  // Initial direction
 
 // Maze Layout (1 = wall, 0 = open space)
 let MAZE = Array.from({ length: rows }, () => Array(cols).fill(0));
 
-// Add walls (1) around the border of the maze and create random obstacles inside
-for (let row = 0; row < rows; row++) {
-    for (let col = 0; col < cols; col++) {
-        if (row === 0 || col === 0 || row === rows - 1 || col === cols - 1) {
-            MAZE[row][col] = 1;  // Border walls
-        } else if (Math.random() < 0.15) {
-            MAZE[row][col] = 1;  // Random wall density (15%)
-        }
-    }
-}
+// Create fewer moving obstacles
+let movingObstacles = [];
 
 // Function to create gradient background
 function createGradient() {
@@ -83,8 +109,9 @@ function createGradient() {
     return gradient;
 }
 
-// Draw the maze layout
+// Draw the maze layout with moving obstacles
 function drawMaze() {
+    // Draw static walls
     for (let row = 0; row < rows; row++) {
         for (let col = 0; col < cols; col++) {
             if (MAZE[row][col] === 1) {
@@ -96,6 +123,12 @@ function drawMaze() {
             }
         }
     }
+
+    // Move and draw moving obstacles
+    movingObstacles.forEach(obs => {
+        obs.move();
+        obs.draw();
+    });
 }
 
 // Class for Snake
@@ -177,28 +210,24 @@ class Food {
     }
 }
 
-// Class for Ghost
-class Ghost {
-    constructor(x, y, radius, speed) {
+// Class for Ghost (Moving Obstacle)
+class MovingObstacle {
+    constructor(x, y, radius, speed, direction) {
         this.x = x;
         this.y = y;
         this.radius = radius;
         this.speed = speed;
+        this.direction = direction;  // Direction can be 'horizontal' or 'vertical'
     }
 
-    moveToward(snakeHead) {
-        let dx = snakeHead.x - this.x;
-        let dy = snakeHead.y - this.y;
-        let distance = Math.hypot(dx, dy);
-
-        // Normalize the direction vector and move the ghost towards the snake
-        if (distance > 0) {
-            dx /= distance;
-            dy /= distance;
+    move() {
+        if (this.direction === 'horizontal') {
+            this.x += this.speed;
+            if (this.x < 0 || this.x > WIDTH - this.radius) this.speed = -this.speed; // Reverse direction
+        } else if (this.direction === 'vertical') {
+            this.y += this.speed;
+            if (this.y < 0 || this.y > HEIGHT - this.radius) this.speed = -this.speed; // Reverse direction
         }
-
-        this.x += dx * this.speed;
-        this.y += dy * this.speed;
     }
 
     draw() {
@@ -209,13 +238,11 @@ class Ghost {
     }
 }
 
-// Initialize the snake, food, and ghosts
-let snake = new Snake(100, 100, 15, 2);  // Initial snake position and velocity
+// Initialize the snake, food, and moving obstacles
+let snake = new Snake(100, 100, 15, 1);  // Slow starting snake speed
 let food = new Food(10);  // Initial food size
-let ghosts = [
-    new Ghost(300, 200, 15, 1),
-    new Ghost(500, 300, 15, 1)
-];
+movingObstacles.push(new MovingObstacle(200, 200, 15, 1, 'horizontal'));
+movingObstacles.push(new MovingObstacle(400, 400, 15, -1, 'vertical'));
 
 // Draw text function
 function drawText(text, x, y, color = WHITE) {
@@ -226,120 +253,86 @@ function drawText(text, x, y, color = WHITE) {
 
 // Try Again Button
 const tryAgainButton = document.createElement('button');
-tryAgainButton.textContent = 'Try Again';
+tryAgainButton.innerHTML = 'Try Again';
 tryAgainButton.id = 'try-again';
 document.body.appendChild(tryAgainButton);
 
-// Function to reset the game
-function resetGame() {
-    // Reset game state
+// Function to restart the game
+function restartGame() {
     score = 0;
-    direction = "RIGHT";
-    running = true;
-
-    // Regenerate the maze with new random obstacles
-    MAZE = Array.from({ length: rows }, () => Array(cols).fill(0));
-    for (let row = 0; row < rows; row++) {
-        for (let col = 0; col < cols; col++) {
-            if (row === 0 || col === 0 || row === rows - 1 || col === cols - 1) {
-                MAZE[row][col] = 1;  // Border walls
-            } else if (Math.random() < 0.15) {
-                MAZE[row][col] = 1;  // Random wall density (15%)
-            }
-        }
-    }
-
-    // Reset snake, food, and ghosts
-    snake = new Snake(100, 100, 15, 2);
+    level = 1;
+    snakeSpeed = 1;  // Reset to slow speed
+    snake = new Snake(100, 100, 15, snakeSpeed);
     food = new Food(10);
-    ghosts = [
-        new Ghost(300, 200, 15, 1),
-        new Ghost(500, 300, 15, 1)
+    movingObstacles = [
+        new MovingObstacle(200, 200, 15, 1, 'horizontal'),
+        new MovingObstacle(400, 400, 15, -1, 'vertical')
     ];
-
-    // Hide the "Try Again" button
+    direction = 'RIGHT';
+    running = true;
     tryAgainButton.style.display = 'none';
-
-    // Restart game loop
     gameLoop();
 }
 
+// Event listener for the "Try Again" button
+tryAgainButton.addEventListener('click', restartGame);
 
+// Game over function
+function gameOver() {
+    running = false;
+    tryAgainButton.style.display = 'block';
+}
 
 // Main game loop
 function gameLoop() {
     if (!running) return;
 
-    ctx.clearRect(0, 0, WIDTH, HEIGHT);
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // Background gradient
     ctx.fillStyle = createGradient();
-    ctx.fillRect(0, 0, WIDTH, HEIGHT);
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
 
     drawMaze();
     snake.update();
     snake.draw();
     food.draw();
 
-    // Move and draw ghosts
-    for (let ghost of ghosts) {
-        ghost.moveToward(snake.body[0]);
-        ghost.draw();
+    for (let obs of movingObstacles) {
+        obs.move();
+        obs.draw();
     }
 
+    // Check collisions
     if (snake.checkWallCollision() || snake.checkSelfCollision()) {
-        running = false;
-        tryAgainButton.style.display = 'block'; 
-        drawText("Game Over!", WIDTH / 2 - 100, HEIGHT / 2 - 50);
-        drawText(`Your Score: ${score}`, WIDTH / 2 - 100, HEIGHT / 2);
-        return;
+        gameOver();
     }
 
-    // Check for food collision
+    // Check if snake eats the food
     let head = snake.body[0];
-    let distance = Math.hypot(head.x - food.position.x, head.y - food.position.y);
-    if (distance < snake.radius + food.radius) {
+    if (Math.hypot(head.x - food.position.x, head.y - food.position.y) < snake.radius + food.radius) {
         score++;
         snake.length++;
-        food.position = food.spawn();  // Spawn new food
-
-        // Gradually increase snake speed (slower increase)
-        snake.velocity = Math.min(snake.velocity + 0.02, 5);  // Max speed capped at 5
+        food.position = food.spawn();  // Generate new food
     }
 
-    // Check for collision with ghosts
-    for (let ghost of ghosts) {
-        let distance = Math.hypot(head.x - ghost.x, head.y - ghost.y);
-        if (distance < snake.radius + ghost.radius) {
-            running = false;
-            tryAgainButton.style.display = 'block'; // Show Try Again button
-            drawText("Game Over!", WIDTH / 2 - 100, HEIGHT / 2 - 50);
-            drawText(`Your Score: ${score}`, WIDTH / 2 - 100, HEIGHT / 2);
-            return;
-        }
+    // Increase speed after each level
+    if (score % 5 === 0) {
+        level++;
+        snakeSpeed += 0.5;  // Speed up after each level
+        snake.velocity = snakeSpeed;
+        drawText(`Level: ${level}`, 10, 100);
     }
 
-    drawText(`Score: ${score}`, 10, 40);
-    requestAnimationFrame(gameLoop);  // Loop the game
+    // Display score
+    drawText(`Score: ${score}`, 10, 50);
+
+    requestAnimationFrame(gameLoop);
 }
 
-// Key event listener for controlling the snake
-document.addEventListener('keydown', (e) => {
-    if (e.key === 'ArrowUp' && direction !== "DOWN") {
-        direction = "UP";
-    } else if (e.key === 'ArrowDown' && direction !== "UP") {
-        direction = "DOWN";
-    } else if (e.key === 'ArrowLeft' && direction !== "RIGHT") {
-        direction = "LEFT";
-    } else if (e.key === 'ArrowRight' && direction !== "LEFT") {
-        direction = "RIGHT";
-    }
-});
-
-// Event listener for "Try Again" button
-tryAgainButton.addEventListener('click', resetGame);
-
-
-// Start the game
+// Start game loop
 gameLoop();
 </script>
+
 </body>
 </html>
