Fixed the music.js with the correct music file of .mp3

--- a/index.html
+++ b/index.html
@@ -1,357 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game with Maze and Ghosts</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #282c34;
-        }
-        canvas {
-            border: 1px solid #000;
-        }
-        #try-again {
-            position: absolute;
-            top: 70%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 10px 20px;
-            font-size: 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            display: none;
-        }
-        #try-again:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Pac-Man Game</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-<script>
-// Initialize canvas and context
-const canvas = document.createElement('canvas');
-const ctx = canvas.getContext('2d');
-document.body.appendChild(canvas);
-canvas.width = 800; // Screen width
-canvas.height = 600; // Screen height
+<div id="controls">
+    <select id="difficulty">
+        <option value="easy">Easy</option>
+        <option value="medium" selected>Medium</option>
+        <option value="hard">Hard</option>
+    </select>
+    <button id="start-button">Start Game</button>
+</div>
 
-const WIDTH = canvas.width;
-const HEIGHT = canvas.height;
-const CELL_SIZE = 40;
-const cols = Math.floor(WIDTH / CELL_SIZE);
-const rows = Math.floor(HEIGHT / CELL_SIZE);
+<div id="game-container">
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <button id="try-again">Try Again</button>
+</div>
 
-const WHITE = 'rgb(255, 255, 255)';
-const BLACK = 'rgb(0, 0, 0)';
-const WALL_COLOR = 'rgb(50, 50, 50)';  // Dark Gray for walls
+<div id="status"></div>
 
-let score = 0;
-let running = true;
-let snakeSpeed = 2;  // Slow starting snake speed
-let direction = "RIGHT";  // Initial direction
-let highestScore = 0;
-
-// Maze Layout (1 = wall, 0 = open space)
-let MAZE = Array.from({ length: rows }, () => Array(cols).fill(0));
-
-// Add walls (1) around the border of the maze and create random obstacles inside
-for (let row = 0; row < rows; row++) {
-    for (let col = 0; col < cols; col++) {
-        if (row === 0 || col === 0 || row === rows - 1 || col === cols - 1) {
-            MAZE[row][col] = 1;  // Border walls
-        } else if (Math.random() < 0.15) {
-            MAZE[row][col] = 1;  // Random wall density (15%)
-        }
-    }
-}
-
-// Function to create gradient background
-function createGradient() {
-    let gradient = ctx.createLinearGradient(0, 0, 0, HEIGHT);
-    gradient.addColorStop(0, 'rgb(135, 206, 250)');  // Light Sky Blue
-    gradient.addColorStop(1, 'rgb(25, 25, 112)');  // Midnight Blue
-    return gradient;
-}
-
-// Draw the maze layout
-function drawMaze() {
-    for (let row = 0; row < rows; row++) {
-        for (let col = 0; col < cols; col++) {
-            if (MAZE[row][col] === 1) {
-                ctx.fillStyle = WALL_COLOR;
-                ctx.fillRect(col * CELL_SIZE, row * CELL_SIZE, CELL_SIZE, CELL_SIZE);
-            } else {
-                ctx.strokeStyle = BLACK;
-                ctx.strokeRect(col * CELL_SIZE, row * CELL_SIZE, CELL_SIZE, CELL_SIZE);
-            }
-        }
-    }
-}
-
-// Add background music
-const backgroundMusic = new Audio('music/background.mp3');
-backgroundMusic.loop = true;  // Loop the background music
-
-// Play the music when the game starts
-function startMusic() {
-    backgroundMusic.play();
-}
-
-// Pause the music when the game ends
-function stopMusic() {
-    backgroundMusic.pause();
-    backgroundMusic.currentTime = 0;  // Reset music to start
-}
-
-// Class for Snake
-class Snake {
-    constructor(x, y, radius, velocity) {
-        this.radius = radius;
-        this.velocity = velocity;
-        this.body = [{ x, y }];
-        this.length = 1;
-    }
-
-    update() {
-        let head = this.body[0];
-        let newHead;
-
-        if (direction === "UP") newHead = { x: head.x, y: head.y - this.velocity };
-        if (direction === "DOWN") newHead = { x: head.x, y: head.y + this.velocity };
-        if (direction === "LEFT") newHead = { x: head.x - this.velocity, y: head.y };
-        if (direction === "RIGHT") newHead = { x: head.x + this.velocity, y: head.y };
-
-        this.body.unshift(newHead);
-        if (this.body.length > this.length) {
-            this.body.pop();
-        }
-    }
-
-    draw() {
-        for (let segment of this.body) {
-            ctx.fillStyle = 'green';
-            ctx.beginPath();
-            ctx.arc(segment.x, segment.y, this.radius, 0, Math.PI * 2);
-            ctx.fill();
-        }
-    }
-
-    checkWallCollision() {
-        let head = this.body[0];
-        let row = Math.floor(head.y / CELL_SIZE);
-        let col = Math.floor(head.x / CELL_SIZE);
-
-        if (row < 0 || row >= rows || col < 0 || col >= cols || MAZE[row][col] === 1) {
-            return true;  // Snake collided with a wall or out of bounds
-        }
-        return false;
-    }
-
-    checkSelfCollision() {
-        const [head, ...body] = this.body;
-        return body.some(segment => segment.x === head.x && segment.y === head.y);
-    }
-}
-
-// Class for Food
-class Food {
-    constructor(radius) {
-        this.radius = radius;
-        this.position = this.spawn();
-    }
-
-    spawn() {
-        while (true) {
-            let x = Math.floor(Math.random() * (cols - 2)) * CELL_SIZE + CELL_SIZE / 2;
-            let y = Math.floor(Math.random() * (rows - 2)) * CELL_SIZE + CELL_SIZE / 2;
-
-            let row = Math.floor(y / CELL_SIZE);
-            let col = Math.floor(x / CELL_SIZE);
-
-            if (MAZE[row][col] === 0) {
-                return { x, y };  // Food placed in an open space
-            }
-        }
-    }
-
-    draw() {
-        ctx.fillStyle = 'purple';
-        ctx.beginPath();
-        ctx.arc(this.position.x, this.position.y, this.radius, 0, Math.PI * 2);
-        ctx.fill();
-    }
-}
-
-// Class for Ghost
-class Ghost {
-    constructor(x, y, radius, speed) {
-        this.x = x;
-        this.y = y;
-        this.radius = radius;
-        this.speed = speed;
-    }
-
-    moveToward(snakeHead) {
-        let dx = snakeHead.x - this.x;
-        let dy = snakeHead.y - this.y;
-        let distance = Math.hypot(dx, dy);
-
-        // Normalize the direction vector and move the ghost towards the snake
-        if (distance > 0) {
-            dx /= distance;
-            dy /= distance;
-        }
-
-        this.x += dx * this.speed;
-        this.y += dy * this.speed;
-    }
-
-    draw() {
-        ctx.fillStyle = 'red';
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
-        ctx.fill();
-    }
-}
-
-// Initialize the snake, food, and ghosts
-let snake = new Snake(100, 100, 15, 2);  // Initial snake position and velocity
-let food = new Food(10);  // Initial food size
-let ghosts = [
-    new Ghost(300, 200, 15, 1),
-    new Ghost(500, 300, 15, 1)
-];
-
-// Draw text function
-function drawText(text, x, y, color = WHITE) {
-    ctx.fillStyle = color;
-    ctx.font = "36px Arial";
-    ctx.fillText(text, x, y);
-}
-
-// Try Again Button
-const tryAgainButton = document.createElement('button');
-tryAgainButton.textContent = 'Try Again';
-tryAgainButton.id = 'try-again';
-document.body.appendChild(tryAgainButton);
-
-// Function to reset the game
-function resetGame() {
-    // Reset game state
-    score = 0;
-    direction = "RIGHT";
-    running = true;
-
-    // Regenerate the maze with new random obstacles
-    MAZE = Array.from({ length: rows }, () => Array(cols).fill(0));
-    for (let row = 0; row < rows; row++) {
-        for (let col = 0; col < cols; col++) {
-            if (row === 0 || col === 0 || row === rows - 1 || col === cols - 1) {
-                MAZE[row][col] = 1;  // Border walls
-            } else if (Math.random() < 0.15) {
-                MAZE[row][col] = 1;  // Random wall density
-            }
-        }
-    }
-
-    snake = new Snake(100, 100, 15, 2);
-    food = new Food(10);
-    ghosts = [
-        new Ghost(300, 200, 15, 1),
-        new Ghost(500, 300, 15, 1)
-    ];
-
-    tryAgainButton.style.display = 'none';
-    startMusic();  // Restart the music
-    gameLoop();
-}
-
-// Display the "Try Again" button when the game ends
-function endGame() {
-    stopMusic();  // Stop the music
-    tryAgainButton.style.display = 'inline-block';
-    drawText('Game Over', WIDTH / 2 - 100, HEIGHT / 2 - 50, 'white');
-    drawText('Score: ' + score, WIDTH / 2 - 70, HEIGHT / 2 + 20, 'white');
-}
-
-// Game loop
-function gameLoop() {
-    ctx.clearRect(0, 0, WIDTH, HEIGHT);
-
-    // Create background gradient
-    const gradient = createGradient();
-    ctx.fillStyle = gradient;
-    ctx.fillRect(0, 0, WIDTH, HEIGHT);
-
-    // Draw the maze, snake, food, and ghosts
-    drawMaze();
-    snake.update();
-    snake.draw();
-    food.draw();
-    ghosts.forEach(ghost => {
-        ghost.moveToward(snake.body[0]);
-        ghost.draw();
-    });
-
-    // Collision detection
-    if (snake.checkWallCollision() || snake.checkSelfCollision()) {
-        running = false;
-        endGame();
-    }
-
-    // Check if snake eats food
-    const snakeHead = snake.body[0];
-    const dist = Math.hypot(snakeHead.x - food.position.x, snakeHead.y - food.position.y);
-    if (dist < snake.radius + food.radius) {
-        score++;
-        snake.length++;
-        food = new Food(10);  // Spawn a new food
-    }
-
-    // Increase snake speed over time
-    if (score > 0 && score % 5 === 0) {
-        snakeSpeed++;
-    }
-
-    // Draw score
-    drawText('Score: ' + score, 20, 40);
-
-    if (running) {
-        requestAnimationFrame(gameLoop);
-    }
-}
-
-// Event listener for keypresses (arrow keys)
-document.addEventListener('keydown', (event) => {
-    if (event.key === 'ArrowUp' && direction !== 'DOWN') {
-        direction = 'UP';
-    } else if (event.key === 'ArrowDown' && direction !== 'UP') {
-        direction = 'DOWN';
-    } else if (event.key === 'ArrowLeft' && direction !== 'RIGHT') {
-        direction = 'LEFT';
-    } else if (event.key === 'ArrowRight' && direction !== 'LEFT') {
-        direction = 'RIGHT';
-    }
-});
-
-// Event listener for "Try Again" button
-tryAgainButton.addEventListener('click', resetGame);
-
-// Start the game and music
-startMusic();
-gameLoop();
-
-</script>
+<script src="Music.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
